--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hammadsaeed.github.io/portfolio-hammad",
+  "homepage": "http://hammadsaeed.github.io",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "predeployy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
