--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hammadsaeed.github.io/",
+  "homepage": "http://hammadsaeed.github.io/portfolio-hammad",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
