--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && npm run copy",
+    "copy": "copy CNAME build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
